log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 07:11:50 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:40: error: expected expression before ‘void’
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                                        ^~~~
arraylist.c:15:45: error: expected ‘)’ before ‘;’ token
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                      ~                      ^
      |                                             )
arraylist.c:15:23: error: incompatible type for argument 1 of ‘calloc’
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                       ^~~~~
      |                       |
      |                       ArrayList {aka struct ArrayList}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList’ {aka ‘struct ArrayList’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
arraylist.c:18:18: error: expected ‘;’ before ‘}’ token
   18 |     return local;
      |                  ^
      |                  ;
   19 | }
      | ~                 
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cff9b01
Thu 30 Mar 2023 07:12:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:40: error: expected expression before ‘void’
   15 |   local.data = calloc(local, 2*sizeof(*void));
      |                                        ^~~~
arraylist.c:15:23: error: incompatible type for argument 1 of ‘calloc’
   15 |   local.data = calloc(local, 2*sizeof(*void));
      |                       ^~~~~
      |                       |
      |                       ArrayList {aka struct ArrayList}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList’ {aka ‘struct ArrayList’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
arraylist.c:18:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   18 |     return local;
      |            ^~~~~
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81cc436
Thu 30 Mar 2023 07:12:23 PM UTC: 
 arraylist.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:41: error: expected expression before ‘void’
   15 |   local->data = calloc(local, 2*sizeof(*void));
      |                                         ^~~~
arraylist.c:15:24: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   15 |   local->data = calloc(local, 2*sizeof(*void));
      |                        ^~~~~
      |                        |
      |                        ArrayList * {aka struct ArrayList *}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList *’ {aka ‘struct ArrayList *’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
64769ae
Thu 30 Mar 2023 07:14:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:24: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   15 |   local->data = calloc(local, 2*sizeof(void *));
      |                        ^~~~~
      |                        |
      |                        ArrayList * {aka struct ArrayList *}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList *’ {aka ‘struct ArrayList *’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
arraylist.c:15:17: error: ‘local’ is used uninitialized [-Werror=uninitialized]
   15 |   local->data = calloc(local, 2*sizeof(void *));
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e133dcd
Thu 30 Mar 2023 07:15:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:15: error: ‘local’ is used uninitialized [-Werror=uninitialized]
   15 |   local->data = calloc(2, sizeof(void *));
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9636c46
Thu 30 Mar 2023 07:15:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c515f2f
Thu 30 Mar 2023 07:16:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
150ebf8
Thu 30 Mar 2023 07:16:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6739968
Thu 30 Mar 2023 07:17:24 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
48ecb43
Thu 30 Mar 2023 07:21:29 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
b91a11f
Thu 30 Mar 2023 07:36:00 PM UTC: 
 arraylist.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:39:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   39 |   void * aux = NULL;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
6eb5ad3
Thu 30 Mar 2023 07:36:07 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
cdbc648
Thu 30 Mar 2023 07:37:04 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1e3822c
Thu 30 Mar 2023 07:37:39 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d2b2375
Thu 30 Mar 2023 07:38:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a5faae
Thu 30 Mar 2023 07:38:43 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1db484c
